Small color tweaks to dark theme.

--- a/src/template_dark.html
+++ b/src/template_dark.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RSS Feed Updates - Dark Theme</title>
+    <title>RSS Feed Updates</title>
     <style>
         body {
             background-color: #121212;
-            color: #e0e0e0;
-            font-family: Arial, sans-serif;
+            color: #88ff92;
+            font-family: Tahoma, sans-serif;
             margin: 0;
             padding: 20px;
         }
@@ -24,7 +24,7 @@
             background-color: #1e1e1e;
         }
         .feed h2 {
-            color: #bb86fc;
+            color: #9088ff;
             margin-top: 0;
         }
         .feed p {
@@ -39,19 +39,19 @@
         }
         .published-date {
             font-size: 0.9em;
-            color: #a0a0a0;
+            color: #8a8a8a;
         }
         .visit-site {
             display: inline-block;
             margin-top: 10px;
             padding: 10px 20px;
             color: #ffffff;
-            background-color: #6200ee;
+            background-color: #1e1e1e;
             border-radius: 5px;
             text-decoration: none;
         }
         .visit-site:hover {
-            background-color: #3700b3;
+            background-color: #494949;
         }
         .feed img {
             max-width: 100%;
