--- a/src/template_homepage_dark.html
+++ b/src/template_homepage_dark.html
@@ -7,11 +7,11 @@
     <style>
         body {
             background-color: #121212;
-            color: #ffffff;
-            font-family: Arial, sans-serif;
+            color: #47fc92;
+            font-family: Tahoma, sans-serif;
         }
         a {
-            color: #1e90ff;
+            color: #60c0fffd;
             text-decoration: none;
             font-size: 1.2em;
         }
