--- a/src/template_dark.html
+++ b/src/template_dark.html
@@ -24,7 +24,7 @@
             background-color: #1e1e1e;
         }
         .feed h2 {
-            color: #9088ff;
+            color: #8496fd;
             margin-top: 0;
         }
         .feed p {
@@ -43,15 +43,15 @@
         }
         .visit-site {
             display: inline-block;
-            margin-top: 10px;
-            padding: 10px 20px;
+            margin-top: 8px;
+            padding: 8px 17px;
             color: #ffffff;
-            background-color: #1e1e1e;
-            border-radius: 5px;
+            background-color: #111111;
+            border-radius: 4px;
             text-decoration: none;
         }
         .visit-site:hover {
-            background-color: #030303;
+            background-color: #030303e7;
         }
         .feed img {
             max-width: 100%;
