--- a/src/template_dark.html
+++ b/src/template_dark.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RSS Feed Updates</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <style>
         body {
             background-color: #121212;
